erDiagram

    USERS ||--o{ PATIENTS : has
    USERS ||--o{ DOCTORS : has

    PATIENTS ||--o{ APPOINTMENTS : books
    DOCTORS ||--o{ APPOINTMENTS : holds
    PATIENTS ||--o{ MEDICAL_RECORDS : owns
    DOCTORS ||--o{ MEDICAL_RECORDS : writes
    APPOINTMENTS ||--|| MEDICAL_RECORDS : generates

    USERS {
        int id PK
        string username
        string email
        string hashed_password
        string role
    }

    PATIENTS {
        int id PK
        string name
        string contact_info
        string insurance_info
        int user_id FK
    }

    DOCTORS {
        int id PK
        string name
        string specialization
        string contact_info
        int user_id FK
    }

    APPOINTMENTS {
        int id PK
        int patient_id FK
        int doctor_id FK
        datetime start_time
        datetime end_time
        string status
    }

    MEDICAL_RECORDS {
        int id PK
        int patient_id FK
        int doctor_id FK
        int appointment_id FK
        string diagnosis
        string treatment
        string notes
        datetime created_at
    }



sequenceDiagram
    participant P as Patient
    participant UI as Frontend
    participant API as FastAPI Backend
    participant DB as Database

    P->>UI: Selects doctor & timeslot
    UI->>API: POST /appointments
    API->>DB: Check doctor availability
    DB-->>API: Availability status

    alt Available
        API->>DB: Create appointment
        DB-->>API: Appointment created
        API-->>UI: Return confirmation
        UI-->>P: Show confirmation
    else Conflict
        API-->>UI: Return error
        UI-->>P: Show conflict warning
    end


sequenceDiagram
    participant D as Doctor
    participant UI as Frontend
    participant API as FastAPI Backend
    participant DB as Database

    D->>UI: Fills medical record form
    UI->>API: POST /medical_records
    API->>DB: Verify doctor identity and appointment
    DB-->>API: Validation success
    API->>DB: Insert medical record
    DB-->>API: Record created
    API-->>UI: Confirmation
    UI-->>D: Show success


